force-app/main/default/objects/GroupedRevenueSchedule__c/GroupedRevenueSchedule__c.object-meta.xml
<CustomObject>
    <label>Grouped Revenue Schedule</label>
    <nameField>
        <displayFormat>GRS-{0000000000}</displayFormat>
        <label>Grouped Revenue Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grouped Revenue Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>