force-app/main/default/objects/GroupedRevenueSchedule__c/fields/For10__c.field-meta.xml
<CustomField>
    <fullName>For10__c</fullName>
    <description>Sales Forecast for October</description>
    <inlineHelpText>Sales Forecast for October</inlineHelpText>
    <label>October Forecast</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>