force-app/main/default/objects/GroupedRevenueSchedule__c/fields/For11__c.field-meta.xml
<CustomField>
    <fullName>For11__c</fullName>
    <description>Sales Forecast for November</description>
    <inlineHelpText>Sales Forecast for November</inlineHelpText>
    <label>November Forecast</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>