force-app/main/default/objects/GroupedRevenueSchedule__c/fields/For12__c.field-meta.xml
<CustomField>
    <fullName>For12__c</fullName>
    <description>Sales Forecast for December</description>
    <inlineHelpText>Sales Forecast for December</inlineHelpText>
    <label>December Forecast</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>