force-app/main/default/objects/GroupedRevenueSchedule__c/fields/GroupedAccountProductRevenue__c.field-meta.xml
<CustomField>
    <fullName>GroupedAccountProductRevenue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Grouped Account Product Revenue</description>
    <inlineHelpText>Associated Revenue</inlineHelpText>
    <label>Grouped Account Product Revenue</label>
    <referenceTo>GroupedAccountProductRevenue__c</referenceTo>
    <relationshipName>Grouped_Account_Product_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>