force-app/main/default/objects/GroupedRevenueSchedule__c/fields/Inc11__c.field-meta.xml
<CustomField>
    <fullName>Inc11__c</fullName>
    <description>Incremental Sales forecast for November</description>
    <formula>For11__c *  TotalIncremental__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Incremental Sales forecast for November</inlineHelpText>
    <label>November Incremental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>