force-app/main/default/objects/GroupedRevenueSchedule__c/fields/Inc2__c.field-meta.xml
<CustomField>
    <fullName>Inc2__c</fullName>
    <description>Incremental Sales forecast for February</description>
    <formula>For2__c *  OpportunityProduct__r.TotalIncremental__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Incremental Sales forecast for February</inlineHelpText>
    <label>February Expected Incremental Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>