force-app/main/default/objects/GroupedRevenueSchedule__c/fields/Inc8__c.field-meta.xml
<CustomField>
    <fullName>Inc8__c</fullName>
    <description>Incremental Sales forecast for August</description>
    <formula>for8__c *  TotalIncremental__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Incremental Sales forecast for August</inlineHelpText>
    <label>August Incremental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>