force-app/main/default/objects/GroupedRevenueSchedule__c/fields/NRTInc3__c.field-meta.xml
<CustomField>
    <fullName>NRTInc3__c</fullName>
    <description>NRT Incremental value for March</description>
    <formula>IF (TotalIncremental__c = 0, 0 , IF (Act3__c -  NRTBaseline__c &gt; 0 ,Act3__c -  NRTBaseline__c ,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>NRT Incremental value for March</inlineHelpText>
    <label>March Incremental Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>