force-app/main/default/objects/GroupedRevenueSchedule__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent Opportunity of the Group Revenue Schedule record.</description>
    <inlineHelpText>The parent Opportunity of the Group Revenue Schedule record.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Grouped_Revenue_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>