force-app/main/default/objects/GroupedRevenueSchedule__c/fields/OpportunityProduct__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Forecast for December</description>
    <inlineHelpText>Sales Forecast for December</inlineHelpText>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipName>GroupedAccountProductForecasts</relationshipName>
    <type>Lookup</type>
</CustomField>