force-app/main/default/objects/GroupedRevenueSchedule__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>GroupedAccountProductRevenue__r.FinancialYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>